--- a/.env
+++ b/.env
@@ -6,4 +6,6 @@ VITE_SUPABASE_ANON_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFz
 # EMAIL JS
 VITE_EMAILJS_SERVICE_ID=service_kb2sabg
 VITE_EMAILJS_TEMPLATE_ID=template_xe6ylaf
+VITE_EMAILJS_TEMPLATE_ID_OTP=template_eaga8vt
 VITE_EMAILJS_PUBLIC_KEY=4LZjA1oLz2eo_NlCj
+
