--- a/electron-builder.json5
+++ b/electron-builder.json5
@@ -13,7 +13,7 @@
     artifactName: "${productName}-Mac-${version}-Installer.${ext}",
   },
   win: {
-    icon: "./src/assets/favicon.ico",
+    icon: "./src/assets/web-app-manifest-512x512.png",
     target: [{ target: "nsis", arch: ["x64"] }],
     artifactName: "${productName}-Windows-${version}-Setup.${ext}",
   },
